--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
-    "handlebars": "^4.0.12",
+    "handlebars": "^4.1.0",
     "multer": "^1.4.1",
     "mysql2": "^1.5.3",
     "passport": "^0.4.0",
@@ -29,16 +29,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
-    "eslint-config-google": "^0.11.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "mocha": "^5.2.0",
-    "prettier": "^1.13.7"
+    "mocha": "^5.2.0"
   },
   "directories": {
     "test": "test"
